Adding the dropdown for the results.