@@ -15,6 +15,7 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>21</java.version>
+        <compilerArgs>--enable-preview</compilerArgs>
     </properties>
     <dependencies>
         <dependency>
@@ -28,7 +29,11 @@
             <version>3.1.0</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -135,6 +140,11 @@
             <groupId>com.j2html</groupId>
             <artifactId>j2html</artifactId>
             <version>1.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>3.5.1</version>
         </dependency>
     </dependencies>
 
